; ModuleID = '/home/carl/AnghaBench/zstd/lib/legacy/extr_zstd_v01.c_FSE_readLEST.c'
source_filename = "/home/carl/AnghaBench/zstd/lib/legacy/extr_zstd_v01.c_FSE_readLEST.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*)* @FSE_readLEST to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @FSE_readLEST(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = call i64 (...) @FSE_32bits()
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @FSE_readLE32(i8* %7)
  %9 = sext i32 %8 to i64
  store i64 %9, i64* %2, align 8
  br label %14

10:                                               ; preds = %1
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @FSE_readLE64(i8* %11)
  %13 = sext i32 %12 to i64
  store i64 %13, i64* %2, align 8
  br label %14

14:                                               ; preds = %10, %6
  %15 = load i64, i64* %2, align 8
  ret i64 %15
}

declare dso_local i64 @FSE_32bits(...) #1

declare dso_local i32 @FSE_readLE32(i8*) #1

declare dso_local i32 @FSE_readLE64(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
